# TRLIB_CLIENT_CAR

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  VehicleClient  client  cmake_install.cmake  main.cpp  readme  temp.txt
data_collection/: Audio.cpp  Audio.h  CameraThreadManager.cpp  CameraThreadManager.h  DataCollectionTask.cpp  DataCollectionTask.h  DataCollector.cpp  DataCollector.h  Imu.cpp  Imu.h  PerceptionDeviceManager.cpp  PerceptionDeviceManager.h  camera.cpp  radar_sim.cpp
data_process/: DataProcessing.cpp  DataProcessing.h  ProcessingTask.cpp  ProcessingTask.h
file_transfer/: FileHandler.cpp  FileHandler.h  FileSend.cpp  FileSend.h  FileSender.cpp  FileSender.h  FileSendingTask.cpp  FileSendingTask.h  IFileHandler.h  INetworkHandler.h  NetworkHandler.cpp  NetworkHandler.h
shared/: SharedQueue.cpp  SharedQueue.h
